@@ -1,0 +1,2 @@
+#define MODE_BIGENDIAN 1
+#include "ufs.c"
